@@ -26,13 +26,13 @@
 #'
 #' Do *NOT* require `t`, `S` and `P` for conversions:
 #'
-#' - `"mg/L", "ug/L", "mmol/L", "umol/L"`
+#' - `"mg/L", "ug/L", "mol/L", "mmol/L", "umol/L"`
 #'
 #' Require `t`, `S` and `P` for conversions:
 #'
-#' - `"mL/L", "mg/kg", "ug/kg", "mmol/kg", "umol/kg", "mL/kg", "%Air"` (i.e. %
-#' Air Saturation), `"%Oxy"` (i.e. % Oxygen Saturation), `"Torr", "hPa", "kPa",`
-#' `"mmHg", "inHg"`
+#' - `"mL/L", "cm3/L", "mg/kg", "ug/kg", "mol/kg", "mmol/kg", "umol/kg",
+#' "mL/kg", "%Air"` (i.e. % Air Saturation), `"%Oxy"` (i.e. % Oxygen
+#' Saturation), `"Torr", "hPa", "kPa",` `"mmHg", "inHg"`
 #'
 #' # [convert_rate()] and [convert_rate.ft()]
 #'
@@ -47,9 +47,9 @@
 #'
 #' Require `t`, `S` and `P` for conversions:
 #'
-#' - `"mL/L", "mg/kg", "ug/kg", "mmol/kg", "umol/kg", "mL/kg",` `"%Air"` (i.e. %
-#' Air Saturation), `"%Oxy"` (i.e. % Oxygen Saturation), `"Torr", "hPa", "kPa",`
-#' `"mmHg", "inHg"`
+#' - `"mL/L", "cm3/L", "mg/kg", "ug/kg", "mmol/kg", "umol/kg", "mL/kg",`
+#' `"%Air"` (i.e. % Air Saturation), `"%Oxy"` (i.e. % Oxygen Saturation),
+#' `"Torr", "hPa", "kPa",` `"mmHg", "inHg"`
 #'
 #' ## Time units for `time.unit` or as part of `flowrate.unit`:
 #'
@@ -97,11 +97,13 @@
 
 unit_args <- function() {
 
-  oxyunit <- c("mg/L", "ug/L", "mmol/L", "umol/L")
-  oxyunit_tsp <- c("mL/L", "mg/kg",
-                  "ug/kg", "mmol/kg", "umol/kg", "mL/kg",
-                  "%Air", "%Oxy", "Torr",
-                  "hPa", "kPa", "mmHg", "inHg")
+  oxyunit <- c("mg/L", "ug/L", "mol/L", "mmol/L", "umol/L")
+  oxyunit_tsp <- c("mL/L", "cm3/L",
+                   "mg/kg", "ug/kg",
+                   "mol/kg", "mmol/kg", "umol/kg",
+                   "mL/kg",
+                   "%Air", "%Oxy",
+                   "Torr", "hPa", "kPa", "mmHg", "inHg")
   oxyunit_out <- c("ug", "mg", "umol", "mmol", "mol", "mL")
   timeunit <- c("sec", "min", "hour", "day")
   massunit <- c("ug", "mg", "g", "kg")
