@@ -32,14 +32,13 @@ denominator.
 
 Do \emph{NOT} require \code{t}, \code{S} and \code{P} for conversions:
 \itemize{
-\item \verb{"mg/L", "ug/L", "mmol/L", "umol/L"}
+\item \verb{"mg/L", "ug/L", "mol/L", "mmol/L", "umol/L"}
 }
 
 Require \code{t}, \code{S} and \code{P} for conversions:
 \itemize{
-\item \verb{"mL/L", "mg/kg", "ug/kg", "mmol/kg", "umol/kg", "mL/kg", "\%Air"} (i.e. \%
-Air Saturation), \code{"\%Oxy"} (i.e. \% Oxygen Saturation), \verb{"Torr", "hPa", "kPa",}
-\verb{"mmHg", "inHg"}
+\item \verb{"mL/L", "cm3/L", "mg/kg", "ug/kg", "mol/kg", "mmol/kg", "umol/kg", "mL/kg", "\%Air"} (i.e. \% Air Saturation), \code{"\%Oxy"} (i.e. \% Oxygen
+Saturation), \verb{"Torr", "hPa", "kPa",} \verb{"mmHg", "inHg"}
 }
 }
 }
@@ -57,9 +56,9 @@ Do \emph{NOT} require \code{t}, \code{S} and \code{P} for conversions:
 
 Require \code{t}, \code{S} and \code{P} for conversions:
 \itemize{
-\item \verb{"mL/L", "mg/kg", "ug/kg", "mmol/kg", "umol/kg", "mL/kg",} \code{"\%Air"} (i.e. \%
-Air Saturation), \code{"\%Oxy"} (i.e. \% Oxygen Saturation), \verb{"Torr", "hPa", "kPa",}
-\verb{"mmHg", "inHg"}
+\item \verb{"mL/L", "cm3/L", "mg/kg", "ug/kg", "mmol/kg", "umol/kg", "mL/kg",}
+\code{"\%Air"} (i.e. \% Air Saturation), \code{"\%Oxy"} (i.e. \% Oxygen Saturation),
+\verb{"Torr", "hPa", "kPa",} \verb{"mmHg", "inHg"}
 }
 }
 
