@@ -134,6 +134,7 @@ Function specific changes:
 - NEW: Can now convert to surface area-specific rates via the `area` input (accepts `"mm2"`, `"cm2"`, `"m2"`, `"km2"`)
 - NEW: Can now import data and output rates using `"day"` as the time unit e.g. `"mgO2/day/m2"`
 - NEW: Can now output oxygen used in moles e.g. `"molO2/day/kg"`
+- NEW: Can now output oxygen used in moles e.g. `"molO2/day/kg"`
 - CHANGE: The `o2.unit` input has been renamed to `oxy.unit`
 - CHANGE: `oxy.unit = NULL` and `time.unit = NULL` now stop the function instead of applying a default unit
 - CHANGE: Now applies a default output unit for mass- and area specific rates as well as absolute rates.
@@ -143,6 +144,8 @@ Function specific changes:
 
 ========================== convert_DO() ============================
 - NEW: Added support for % oxygen saturation (`"%O2"`) units. % air saturation is now `"%Air"` and the previous `"%"` operator for this has been deprecated
+- NEW: Added support for oxygen concentration units of `mol/L` and `mol/kg`
+- NEW: Added support for oxygen concentration units of `cm3/L`. This is a scarce unit, only used in older publications and is equivalent to `ml/L`.
 - NEW: Added `simplify` input. The default is `simplify = TRUE` and means the converted values are output as a numeric vector, rather than within a `list` object. If `FALSE` the output is a `list` object of class `convert_DO` which works with `print()`, `summary()`, and `mean()`
 - CHANGE: Removed ability to accept objects of class `calc_rate`, `auto_rate` or `adjust_rate`. This didn't make any sense in this function as rates are not a DO measure!
 - CHANGE: Added warning for `P` atmospheric pressure values being outside a realistic range.
